Stop navbar wrapping (#293)

--- a/css/main.scss
+++ b/css/main.scss
@@ -289,7 +289,7 @@ header {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 880px) {
   header {
     .right {
       display: none;
